--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -82,12 +82,12 @@
       [대한민국 부동산 흐름 읽는법]-신진수<br>
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
     <h2><strong>역사[Lv.8]</h2></strong>
-      [하룻밤에 읽는 영국사]-안병억<br>
+      <b>3x[하룻밤에 읽는 영국사]-안병억</b><br>
       [하룻밤에 읽는 한국사]-최용범<br>
       [세상에서 가장 쉬운 세계사]-천레이<br>
       [하룻밤에 읽는 한국 근현대사]-최용범<br>
       [하멜표류기]-헨드릭 하멜<br>
-      [알렉산드로스 제국의 눈물]-제임스 롬<br>
+      2x[알렉산드로스 제국의 눈물]-제임스 롬<br>
       2x[약자를 위한 현실주의]-이주희<br>
       <b>3x[거의 모든 IT의 역사]-정지훈</b><br>
     <h2><strong>철학[Lv.4]</h2></strong>
@@ -141,7 +141,7 @@
     <p><pre>
       <h2>2020년 7월 독서</h2>
         <li>경제/경영:[주식투자의 법칙]-제시 리버모어</li>
-        <li>역사:[하룻밤에 읽는 영국사]-안병억</li>
+        <li>역사:2x[하룻밤에 읽는 영국사]-안병억</li>
         <li>철학:</li>
         <li>심리학/처세술:[포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만</li>
         <li>과학:</li>
