--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -51,6 +51,35 @@
 
 
 
+
+
+  <a>[July 17th,2020]</a>
+
+  <p>
+    consummate, brash, garrulous, tout, condone,<br>
+    presumptive, loquacity, meander, ravage, blight,<br>
+    lukewarm, akin to, rancour, spate, filibuster<br>
+  </p>
+
+
+  <a>[July 16th,2020]</a>
+
+  <p>
+    minnow, notch, transient, disenchant, emasculate,<br>
+    relapse, coop up, asymptomatic, vacillate, flurry,<br>
+    fester, retroactive, prowl, acrimony, belligerence<br><br>
+  </p>
+
+
+  <a>[July 15th,2020]</a>
+
+  <p>
+    incumbent, rampant, landslide, flail, transpire,<br>
+    doddering, confiscate, centrist, signifier, hot-headed,<br>
+    flip-flopped, reassuring, smorgasbord, churlish, neocon<br><br>
+  </p>
+
+
   <a>[July 9th,2020]</a>
 
   <p>
