--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -53,7 +53,11 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=w_1L10oqNjw" target="_blank" title="5분 뚝딱 철학">
+    결정론과 자유의지 part 1</a><br>
 
+  <a href="https://www.youtube.com/watch?v=PCmn2M7RxGc" target="_blank" title="5분 뚝딱 철학">
+    결정론과 자유의지 part 2 (feat. 프랭크퍼트, 다니엘 데닛)</a><br>
 
   <a href="https://www.youtube.com/watch?v=IhKDKEghFBc" target="_blank" title="5분 뚝딱 철학">
     방어기제 (Feat. 안나 프로이트, 베일런트)</a><br>
