--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -55,6 +55,18 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=5msQZvhyMG0" target="_blank" title="쉬운바둑">
+    [실전사활 #1] 소목굳힘 2선, 3.3붙임 사활 1편</a><br>
+
+  <a href="https://www.youtube.com/watch?v=RKOY3OkC4Vo" target="_blank" title="쉬운바둑">
+    (사활문제) #12</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Jzdo0yXXmns" target="_blank" title="쉬운바둑">
+    (바둑학원강의) 실전사활 3강 - 화점 양날일자 굳힘. 이건 무조건 들어가야돼!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=nS2ZANhp0TU" target="_blank" title="쉬운바둑">
+    (바둑학원강의) 실전사활 2강 - 절대로 살려줄 수 없다!</a><br>
+
   <a href="https://www.youtube.com/watch?v=dAGOd7yHcqY" target="_blank" title="쉬운바둑">
     (바둑학원강의) 아이들과 함께하는 실전사활 1강 - 귀6궁,7궁 완벽정리(고급사활)</a><br>
 
