--- a/The_economist.html
+++ b/The_economist.html
@@ -47,12 +47,52 @@
   <div id="contents">
   <img src="Economist-Never-stop-questioning.png" width="100%">
 
+
   <h1>The Economist[Lv.19]</h1><br><br><br>
 
 
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=GnFzCJvewOw" target="_blank" title="JD부자연구소">
+    이 법 통과 안 되면 나스닥 폭락한다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=slW4ogjwShc" target="_blank" title="삼프로TV_경제의신과함께">
+    러셀2000 지수의 급등.. 외국인의 귀환으로 이어지나?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=PNi5oSAilNo" target="_blank" title="자유잍튜브THE">
+    코스피 2300 상승의 조건. 기다리면 때는 오나? 정말 올까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=RsqLS1C1zwY" target="_blank" title="삼프로TV_경제의신과함께">
+    시장 심리의 바로미터는 테슬라 주가다!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=2Jhho9u85aQ" target="_blank" title="삼프로TV_경제의신과함께">
+    외국인, 기관 쌍끌이 매수, 현명한 개인은 팔았다!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=uI6oprKSOMk" target="_blank" title="삼프로TV_경제의신과함께">
+    달러의 약세 환경 조성.. 금융 시장의 변화의 모멘텀인가? f.오건영 팀장</a><br>
+
+  <a href="https://www.youtube.com/watch?v=6F0EYc4nRuE" target="_blank" title="삼프로TV_경제의신과함께">
+    한국판 뉴딜 정책 보고회 초청된 현대차 정의선, 네이버 한성숙 대표는 무슨 이야기를 할까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=cPneQau7XhE" target="_blank" title="삼프로TV_경제의신과함께">
+    한국형 뉴딜정책.. 주가 상승 원동력 될까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=IpD7dydJOF4" target="_blank" title="삼프로TV_경제의신과함께">
+    상승무게를 못견딘 나스닥, 추가 급락 여부는?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ZmdR61iLK7U" target="_blank" title="JD부자연구소">
+    디플레이션은 전쟁을 부른다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=9dTuycnG1Fs" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    대도시의 몰락과 테크의 성장</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Lf7ORB4HP6k" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    경제전쟁 2라운드! 한국판 뉴딜과 중국의 부양책으로 맞불!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=tehzd7ZbIMk" target="_blank" title="삼프로TV_경제의신과함께">
+    향후 테슬라의 경쟁사는 애플이다</a><br>
 
   <a href="https://www.youtube.com/watch?v=jD6pdWPESVs" target="_blank" title="돈파는가게_세상의 모든 재테크">
     [부자들의 습관 버티는 기술] 제2강. 투자 설계도(저자 직강)</a><br>
