--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -54,7 +54,7 @@
 
 
 
-  <h1>The War of Genesis[Lv.72]</h1><br><br><br>
+  <h1>The War of Genesis[Lv.82]</h1><br><br><br>
 
 
 
@@ -171,106 +171,105 @@
     WEB2 JavaScript - 1. Introduction</a><br><br>
 
 
-  <h2>[올인원 패키지 : 안드로이드 앱 개발]</h2><br>
-
+  <h2>[올인원 패키지 : 안드로이드 앱 개발]</h2>
   <p>
     <h3>안드로이드 Basic with Java</h3>
-      <a>01. View - 01. 개요 (개념)</a><br>
-      <a>01. View - 02. 개요 (실습)</a><br>
-      <a>01. View - 03. 크기 (개념)</a><br>
-      <a>01. View - 04. 크기 (실습)</a><br>
-      <a>01. View - 05. Linearyout (개념)</a><br>
-      <a>01. View - 06. Linearlayout (실습)</a><br>
-      <a>01. View - 07. Relativelayout (개념)</a><br>
-      <a>01. View - 08. Relativelayout (실습)</a><br>
-      <a>01. View - 09. FrameLayout (개념)</a><br>
-      <a>01. View - 10. FrameLayout (실습)</a><br>
-      <a>01. View - 11. Scrollview (개념)</a><br>
-      <a>01. View - 12. Scrollview (실습)</a><br>
-      <a>01. View - 13. [과제] 과제 설명</a><br>
-      <a>01. View - 14. 과제 풀이 (1)</a><br>
-      <a>01. View - 15. 과제 풀이 (2)</a><br>
-      <a>01. View - 16. 과제 풀이 (3)</a><br>
-      <a>02. Java - 01. 자바란</a><br>
-      <a>02. Java - 02. 변수 (개념)</a><br>
-      <a>02. Java - 03. 자료형 (개념)</a><br>
-      <a>02. Java - 04. 변수,자료형 (실습)</a><br>
-      <a>02. Java - 05. 메소드 (개념)</a><br>
-      <a>02. Java - 06. 메소드 (실습)</a><br>
-      <a>02. Java - 07. 연산자 (개념)</a><br>
-      <a>02. Java - 08. 연산 (실습)</a><br>
-      <a>02. Java - 09. 제어흐름 (개념)</a><br>
-      <a>02. Java - 10. 제어흐름 (실습)</a><br>
-      <a>02. Java - 11. 제어흐름2 (개념)</a><br>
-      <a>02. Java - 12. 제어흐름2 (실습)</a><br>
-      <a>02. Java - 13. 배열 (개념)</a><br>
-      <a>02. Java - 14. 배열 (실습)</a><br>
-      <a>02. Java - 15. 리스트 (개념)</a><br>
-      <a>02. Java - 16. 리스트 (실습)</a><br>
-      <a>02. Java - 17. [과제] 중간과제 설명</a><br>
-      <a>02. Java - 19. 클래스 (개념)</a><br>
-      <a>02. Java - 18. [과제] 중간과제 풀이 영상</a><br>
-      <a>02. Java - 20. 클래스 (실습)</a><br>
-      <a>02. Java - 21. [과제] 클래스과제 설명</a><br>
-      <a>02. Java - 22. 클래스과제 풀이</a><br>
-      <a>02. Java - 23. 상속 (개념)</a><br>
-      <a>02. Java - 24. 상속 (실습)</a><br>
-      <a>02. Java - 25. 인터페이스 개념</a><br>
-      <a>02. Java - 26. 인터페이스 실습</a><br>
-      <a>02. Java - 27. 접근제어자 개념</a><br>
-      <a>02. Java - 28. 접근제어자 실습</a><br>
-      <a>02. Java - 29. 제너릭 개념</a><br>
-      <a>02. Java - 30. 파이널 과제 설명</a><br>
-      <a>02. Java - 31. 파이널 과제 풀이</a><br>
-      <a>03. Android - 01. 안드로이드 스튜디오 투어 1</a><br>
-      <a>03. Android - 02. 안드로이드 스튜디오 투어 2</a><br>
-      <a>03. Android - 03. 안드로이드 스튜디오 투어 3</a><br>
-      <a>03. Android - 04. 안드로이드 스튜디오 투어 4</a><br>
-      <a>03. Android - 05. Activity 개념</a><br>
-      <a>03. Android - 06. Activity 실습</a><br>
-      <a>03. Android - 07. Intent 개념</a><br>
-      <a>03. Android - 08. Intent 실습 1</a><br>
-      <a>03. Android - 09. Intent 실습 2</a><br>
-      <a>03. Android - 10. Intent 실습 3</a><br>
-      <a>03. Android - 11. Stack 개념</a><br>
-      <a>03. Android - 12. Stack 실습</a><br>
-      <a>03. Android - 13. Thread 개념</a><br>
-      <a>03. Android - 14. Thread 실습</a><br>
-      <a>03. Android - 15. Context 개념</a><br>
-      <a>03. Android - 16. Context 실습</a><br>
-      <a>03. Android - 17. Resource 실습</a><br>
-      <a>03. Android - 18. ViewComponent 실습</a><br>
-      <a>03. Android - 19. Listenr 실습</a><br>
-      <a>03. Android - 20. 계산기 만들어보기 과제 설명</a><br>
-      <a>03. Android - 21. 계산기 만들어보기 과제 풀이</a><br>
-      <a>03. Android - 22. Fragmnet 개념</a><br>
-      <a>03. Android - 23. Fragmnet 실습 1</a><br>
-      <a>03. Android - 24. Fragmnet 실습 2</a><br>
-      <a>03. Android - 25. Fragmnet 실습 3</a><br>
-      <a>03. Android - 26. Fragmnet 실습 4</a><br>
-      <a>03. Android - 27. Library 개념</a><br>
-      <a>03. Android - 28. Library 실습</a><br>
-      <a>03. Android - 29. AddView 개념</a><br>
-      <a>03. Android - 30. AddView 실습</a><br>
-      <a>03. Android - 31. 전화번호부 과제 설명</a><br>
-      <a>03. Android - 32. 전화번호부 과제 풀이</a><br>
-      <a>03. Android - 33. ListView 개념</a><br>
-      <a>03. Android - 34. ListView 실습 1</a><br>
-      <a>03. Android - 35. ListView 실습 2</a><br>
-      <a>03. Android - 36. ListView 실습 3</a><br>
-      <a>03. Android - 37. Recycvler VIew 개념</a><br>
-      <a>03. Android - 38. Recycvler VIew 실습</a><br>
-      <a>03. Android - 39. Pager , TabLayout 개념</a><br>
-      <a>03. Android - 40. Pager , TabLayout 실습</a><br>
-      <a>03. Android - 41. Shared Preference 개념</a><br>
-      <a>03. Android - 42. Shared Preference 실습</a><br>
-      <a>03. Android - 43. AsyncTask 개념</a><br>
-      <a>03. Android - 44. AsyncTask 실습</a><br>
-      <a>03. Android - 45. Network 개념</a><br>
-      <a>03. Android - 46. Network 실습 1</a><br>
-      <a>03. Android - 47. Network 실습 2</a><br>
-      <a>03. Android - 48. Authorization 개념</a><br>
-      <a>03. Android - 49. Authorization 실습</a><br><br>
+      <a>*</a><a>*</a><a>01. View - 01. 개요 (개념)</a><br>
+      <a>*</a><a>*</a><a>01. View - 02. 개요 (실습)</a><br>
+      <a>*</a><a>*</a><a>01. View - 03. 크기 (개념)</a><br>
+      <a>*</a><a>*</a><a>01. View - 04. 크기 (실습)</a><br>
+      <a>*</a><a>*</a><a>01. View - 05. Linearyout (개념)</a><br>
+      <a>*</a><a>*</a><a>01. View - 06. Linearlayout (실습)</a><br>
+      <a>*</a><a>*</a><a>01. View - 07. Relativelayout (개념)</a><br>
+      <a>*</a><a>*</a><a>01. View - 08. Relativelayout (실습)</a><br>
+      <a>*</a><a>*</a><a>01. View - 09. FrameLayout (개념)</a><br>
+      <a>*</a><a>*</a><a>01. View - 10. FrameLayout (실습)</a><br>
+      <a>*</a><a>01. View - 11. Scrollview (개념)</a><br>
+      <a>*</a><a>01. View - 12. Scrollview (실습)</a><br>
+      <a>*</a><a>01. View - 13. [과제] 과제 설명</a><br>
+      <a>*</a><a>01. View - 14. 과제 풀이 (1)</a><br>
+      <a>*</a><a>01. View - 15. 과제 풀이 (2)</a><br>
+      <a>*</a><a>01. View - 16. 과제 풀이 (3)</a><br>
+      <a>*</a><a>02. Java - 01. 자바란</a><br>
+      <a>*</a><a>02. Java - 02. 변수 (개념)</a><br>
+      <a>*</a><a>02. Java - 03. 자료형 (개념)</a><br>
+      <a>*</a><a>02. Java - 04. 변수,자료형 (실습)</a><br>
+      <a>*</a><a>02. Java - 05. 메소드 (개념)</a><br>
+      <a>*</a><a>02. Java - 06. 메소드 (실습)</a><br>
+      <a>*</a><a>02. Java - 07. 연산자 (개념)</a><br>
+      <a>*</a><a>02. Java - 08. 연산 (실습)</a><br>
+      <a>*</a><a>02. Java - 09. 제어흐름 (개념)</a><br>
+      <a>*</a><a>02. Java - 10. 제어흐름 (실습)</a><br>
+      <a>*</a><a>02. Java - 11. 제어흐름2 (개념)</a><br>
+      <a>*</a><a>02. Java - 12. 제어흐름2 (실습)</a><br>
+      <a>*</a><a>02. Java - 13. 배열 (개념)</a><br>
+      <a>*</a><a>02. Java - 14. 배열 (실습)</a><br>
+      <a>*</a><a>02. Java - 15. 리스트 (개념)</a><br>
+      <a>*</a><a>02. Java - 16. 리스트 (실습)</a><br>
+      <a>*</a><a>02. Java - 17. [과제] 중간과제 설명</a><br>
+      <a>*</a><a>02. Java - 19. 클래스 (개념)</a><br>
+      <a>*</a><a>02. Java - 18. [과제] 중간과제 풀이 영상</a><br>
+      <a>*</a><a>02. Java - 20. 클래스 (실습)</a><br>
+      <a>*</a><a>02. Java - 21. [과제] 클래스과제 설명</a><br>
+      <a>*</a><a>02. Java - 22. 클래스과제 풀이</a><br>
+      <a>*</a><a>02. Java - 23. 상속 (개념)</a><br>
+      <a>*</a><a>02. Java - 24. 상속 (실습)</a><br>
+      <a>*</a><a>02. Java - 25. 인터페이스 개념</a><br>
+      <a>*</a><a>02. Java - 26. 인터페이스 실습</a><br>
+      <a>*</a><a>02. Java - 27. 접근제어자 개념</a><br>
+      <a>*</a><a>02. Java - 28. 접근제어자 실습</a><br>
+      <a>*</a><a>02. Java - 29. 제너릭 개념</a><br>
+      <a>*</a><a>02. Java - 30. 파이널 과제 설명</a><br>
+      <a>*</a><a>02. Java - 31. 파이널 과제 풀이</a><br>
+      <a>*</a><a>03. Android - 01. 안드로이드 스튜디오 투어 1</a><br>
+      <a>*</a><a>03. Android - 02. 안드로이드 스튜디오 투어 2</a><br>
+      <a>*</a><a>03. Android - 03. 안드로이드 스튜디오 투어 3</a><br>
+      <a>*</a><a>03. Android - 04. 안드로이드 스튜디오 투어 4</a><br>
+      <a>*</a><a>03. Android - 05. Activity 개념</a><br>
+      <a>*</a><a>03. Android - 06. Activity 실습</a><br>
+      <a>*</a><a>03. Android - 07. Intent 개념</a><br>
+      <a>*</a><a>03. Android - 08. Intent 실습 1</a><br>
+      <a>*</a><a>03. Android - 09. Intent 실습 2</a><br>
+      <a>*</a><a>03. Android - 10. Intent 실습 3</a><br>
+      <a>*</a><a>03. Android - 11. Stack 개념</a><br>
+      <a>*</a><a>03. Android - 12. Stack 실습</a><br>
+      <a>*</a><a>03. Android - 13. Thread 개념</a><br>
+      <a>*</a><a>03. Android - 14. Thread 실습</a><br>
+      <a>*</a><a>03. Android - 15. Context 개념</a><br>
+      <a>*</a><a>03. Android - 16. Context 실습</a><br>
+      <a>*</a><a>03. Android - 17. Resource 실습</a><br>
+      <a>*</a><a>03. Android - 18. ViewComponent 실습</a><br>
+      <a>*</a><a>03. Android - 19. Listenr 실습</a><br>
+      <a>*</a><a>03. Android - 20. 계산기 만들어보기 과제 설명</a><br>
+      <a>*</a><a>03. Android - 21. 계산기 만들어보기 과제 풀이</a><br>
+      <a>*</a><a>03. Android - 22. Fragmnet 개념</a><br>
+      <a>*</a><a>03. Android - 23. Fragmnet 실습 1</a><br>
+      <a>*</a><a>03. Android - 24. Fragmnet 실습 2</a><br>
+      <a>*</a><a>03. Android - 25. Fragmnet 실습 3</a><br>
+      <a>*</a><a>03. Android - 26. Fragmnet 실습 4</a><br>
+      <a>*</a><a>03. Android - 27. Library 개념</a><br>
+      <a>*</a><a>03. Android - 28. Library 실습</a><br>
+      <a>*</a><a>03. Android - 29. AddView 개념</a><br>
+      <a>*</a><a>03. Android - 30. AddView 실습</a><br>
+      <a>*</a><a>03. Android - 31. 전화번호부 과제 설명</a><br>
+      <a>*</a><a>03. Android - 32. 전화번호부 과제 풀이</a><br>
+      <a>*</a><a>03. Android - 33. ListView 개념</a><br>
+      <a>*</a><a>03. Android - 34. ListView 실습 1</a><br>
+      <a>*</a><a>03. Android - 35. ListView 실습 2</a><br>
+      <a>*</a><a>03. Android - 36. ListView 실습 3</a><br>
+      <a>*</a><a>03. Android - 37. Recycvler VIew 개념</a><br>
+      <a>*</a><a>03. Android - 38. Recycvler VIew 실습</a><br>
+      <a>*</a><a>03. Android - 39. Pager , TabLayout 개념</a><br>
+      <a>*</a><a>03. Android - 40. Pager , TabLayout 실습</a><br>
+      <a>*</a><a>03. Android - 41. Shared Preference 개념</a><br>
+      <a>*</a><a>03. Android - 42. Shared Preference 실습</a><br>
+      <a>*</a><a>03. Android - 43. AsyncTask 개념</a><br>
+      <a>*</a><a>03. Android - 44. AsyncTask 실습</a><br>
+      <a>*</a><a>03. Android - 45. Network 개념</a><br>
+      <a>*</a><a>03. Android - 46. Network 실습 1</a><br>
+      <a>*</a><a>03. Android - 47. Network 실습 2</a><br>
+      <a>*</a><a>03. Android - 48. Authorization 개념</a><br>
+      <a>*</a><a>03. Android - 49. Authorization 실습</a><br><br>
 
     <h3>안드로이드 Basic with Kotlin</h3>
       <a>01. 기본 - 00. AndroidStudio 프로젝트만들기</a><br>
@@ -392,7 +391,6 @@
       <a>33. 프로토타입과 클래스 - 연습 - Food class 만들기</a><br><br>
 
     <h3>React Native</h3>
-
       <a>00. 소개 - 01. React Native OT</a><br>
       <a>00. 소개 - 02. React Native 역사, 경쟁사</a><br>
       <a>01. 시작 - 01. 세부적인 설치 과정 (nodejs & npm)</a><br>
@@ -473,8 +471,7 @@
   </p>
 
 
-<h2>[올인원 패키지 : 게임 제작]</h2><br>
-
+<h2>[올인원 패키지 : 게임 제작]</h2>
   <p>
     <h3>게임 기획</h3>
       <a>01. Intro - 01. 강사 소개 및 강의 소개</a><br>
