--- a/夫學須靜也_才須學也.html
+++ b/夫學須靜也_才須學也.html
@@ -48,12 +48,113 @@
     <img src="이길수있습니다.jpeg" width="100%">
 
 
-  <h1>夫學須靜也 才須學也[Lv.1]</h1><br><br><br>
+  <h1>夫學須靜也 才須學也[Lv.3]</h1><br><br><br>
 
 
 
 
-  <a><h3>[성을 공격하는 것은 하책 중의 하책]</h3></a>
+  <a><a><h3>[적을 알고 나를 알면 위태롭지 않다]</h3></a></a>
+    <p>
+      故曰(고왈) 知己知彼(지기지피) 百戰不殆(백전불태)<br>
+      그러므로 말한다. 적을 알고 나를 알면 백번 싸워도 위태롭지 않을 것이다.<br><br>
+
+      不知彼而知己(부지피이지기) 一勝一負(일승일부)<br>
+      적을 알지 못하고 나만 알면 한 번은 이기고 한 번은 지게 될 것이며,<br><br>
+
+      不知彼不知己(부지피부지기) 每戰必殆(매전필태)<br>
+      적을 알지 못하고 나도 알지 못하면 싸울 때마다 반드시 위태롭게 될 것이다.<br><br>
+    </p><br>
+
+
+  <a><a><h3>[승리로 가는 다섯 가지 길]</h3></a></a>
+    <p>
+      故知勝有五(고지승유오)<br>
+      따라서 승리를 (미리) 아는 데는 다섯 가지가 있다.<br><br>
+
+      知可以與戰(지가이여전) 不可以與戰者勝(부가이여전자승)<br>
+      싸워야 할 때를 아는 것과 싸워서는 안 될 때를 아는 자는 승리한다.<br><br>
+
+      識衆寡之用者勝(식중과지용자승)<br>
+      병력이 많고 적음에 따라 용병법을 아는 자는 승리한다.<br><br>
+
+      上下同欲者勝(상하동욕자승)<br>
+      위와 아래가 한마음이 되면 승리한다.<br><br>
+
+      以虞待不虞者勝(이우대부우자승)<br>
+      준비하고 있으면서 준비하지 못한 적을 기다리는 자는 승리한다.<br><br>
+
+      將能而君不御者勝(장능이군부어자승)<br>
+      장수가 유능하고 군주가 조종하려고 들지 않으면 승리한다.<br><br>
+
+      此五者知勝之道也(차오자지승지도야)<br>
+      이 다섯 가지는 승리를 알 수 있는 이치이다.<br><br>
+    </p><br>
+
+
+  <a><a><h3>[군주가 장수의 일에 관여하지 말아야 할 세 가지]</h3></a></a>
+    <p>
+      夫將者(부장자) 國之輔也(국지보야)<br>
+      장수란 나라를 보좌하는 자이다.<br><br>
+
+      輔周則國必强(보주칙국필강) 輔隙則國必弱(보극칙국필약)<br>
+      보좌함에 두루 미치면 나라는 반드시 강성해지지만, 보좌함에 틈이 벌어지면 나라는 반드시 쇠약해진다.<br><br>
+
+      故君之所以患於軍者三(고군지소이환어군자삼)<br>
+      그러므로 군주가 군대에 해를 끼치는 상황이 세 가지 있다.<br><br>
+
+      不知軍之不可以進(부지군지부가이진) 而謂之進(이위지진)<br>
+      군대가 진격할 수 없는 상황임에도 불구하고 진군하라는 명을 내리거나,<br><br>
+
+      不知軍之不可以退(부지군지부가이퇴) 而謂之退(이위지퇴)<br>
+      군대가 후퇴해서는 안 되는 상황임에도 불구하고 후퇴하라는 명을 내리는 경우로,<br><br>
+
+      是謂縻軍(시위미군)<br>
+      이를 미군이라고 한다.<br><br>
+
+      不知三軍之事(부지삼군지사) 而同三軍之政者(이동삼군지정자) 則軍士惑矣(칙군사혹의)<br>
+      삼군의 사정을 알지 못하면서 삼군 군정에 간섭하면 군사들은 미혹된다.<br><br>
+
+      不知三軍之權(부지삼군지권) 而同三軍之任(이동삼군지임) 則軍士疑矣(칙군사의의)<br>
+      삼군의 권한을 알지 못하면서 삼군의 직책을 맡으려고 한다면 군사들이 회의를 품게 된다.<br><br>
+
+      三軍旣惑且疑(삼군기혹차의) 則諸侯之難至矣(칙제후지난지의) 是謂亂軍引勝(시위난군인승)<br>
+
+      삼군이 미혹되기도 하고 의심하기도 하면 제후들이 난을 일으키니, 이것을 (우리) 군대를 어지럽게 하여 (적이) 승리하게 이끌어준다고 하는 것이다.<br><br>
+    </p><br>
+
+
+  <a><a><h3>[네 가지 용병 원칙]</h3></a></a>
+    <p>
+      故用兵之法(고용병지법)<br>
+      그러므로 용병의 원칙은<br><br>
+
+      十則圍之(십칙위지)<br>
+      열배면 적을 포위하고,<br><br>
+
+      五則攻之(오칙공지)<br>
+      다섯 배면 적을 공격하며,<br><br>
+
+      倍則分之(배칙분지)<br>
+      두 배면 적을 분산시킨다.<br><br>
+
+      敵則能戰之(적칙능전지)<br>
+      대적할 만하면 적을 맞아 싸우고,<br><br>
+
+      少則能逃之(소칙능도지)<br>
+      적으면 적으로부터 달아나며,<br><br>
+
+      不若則能避之(부야칙능피지)<br>
+      대적할 만하지 못하면 적을 피해야 한다.<br><br>
+
+      故小必敵之堅(고소필적지견)<br>
+      그러므로 작고 약한 군대가 적을 맞아 견고하게 수비한다면,<br><br>
+
+      大敵之擒也(대적지금야)<br>
+      강대한 적의 포로가 된다.<br><br>
+    </p><br>
+
+
+  <a><a><h3>[성을 공격하는 것은 하책 중의 하책]</h3></a></a>
     <p>
 
       故上兵伐謀(고상병벌모)<br>
@@ -100,7 +201,7 @@
     </p><br>
 
 
-  <a><h3>[싸우지 않고 이기는 것이 최상책이다]</h3></a>
+  <a><a><h3>[싸우지 않고 이기는 것이 최상책이다]</h3></a></a>
 
     <p>
       孫子曰(손자왈) 凡用兵之法(범용병지법)<br>
@@ -129,7 +230,7 @@
     </p><br>
 
 
-  <a><h3>[현지 조달이 전략이다]</h3></a>
+  <a><a><h3>[현지 조달이 전략이다]</h3></a></a>
 
     <p>
       故智將務食於敵(고지장무식어적)<br>
@@ -143,7 +244,7 @@
     </p><br>
 
 
-  <a><h3>[장기전의 폐해]</h3></a>
+  <a><a><h3>[장기전의 폐해]</h3></a></a>
 
     <p>
       國之貧於師者遠輸(국지빈어사자원수)<br>
@@ -181,7 +282,7 @@
     </p><br>
 
 
-  <a><h3>[식량은 적지에서 충당하라]</h3></a>
+  <a><a><h3>[식량은 적지에서 충당하라]</h3></a></a>
 
     <p>
       善用兵者(선용병자)<br>
@@ -204,7 +305,7 @@
     </p><br>
 
 
-  <a><h3>[질질 끌면 패망한다]</h3></a>
+  <a><a><h3>[질질 끌면 패망한다]</h3></a></a>
 
     <p>
       其用戰也貴勝(기용전야귀승)<br>
@@ -245,7 +346,7 @@
     </p><br>
 
 
-  <a><h3>[비용을 계산하라]</h3></a>
+  <a><a><h3>[비용을 계산하라]</h3></a></a>
 
     <p>
       孫子曰(손자왈) 凡用兵之法(범용병지법) 馳車千駟(치거천사) 革車千乘(혁거천승) 帶甲十萬(대갑십만) 千里饋糧(천리궤량)<br>
@@ -256,7 +357,7 @@
     <p><br>
 
 
-  <a><h3>[싸우기 전에 계산하라]</h3></a>
+  <a><a><h3>[싸우기 전에 계산하라]</h3></a></a>
 
     <p>
       夫未戰而廟算勝者(부미전이묘산승자) 得算多也(득산다야)<br>
@@ -276,7 +377,7 @@
     </p><br>
 
 
-  <a><h3>[전쟁은 속임수이다]</h3></a>
+  <a><a><h3>[전쟁은 속임수이다]</h3></a></a>
 
     <p>
       勢者(세자) 因利而制權也(인리이제권야)<br>
@@ -335,7 +436,7 @@
     </p><br>
 
 
-  <a><h3>[전쟁 전 가늠해야 할 일곱 가지]</h3></a>
+  <a><a><h3>[전쟁 전 가늠해야 할 일곱 가지]</h3></a></a>
 
     <p>
       故校之以七計, 而塞其情. 曰:<br>
@@ -367,7 +468,7 @@
     </p><br>
 
 
-  <a><h3>[전쟁 전 헤아려야 할 다섯 가지]</h3></a>
+  <a><a><h3>[전쟁 전 헤아려야 할 다섯 가지]</h3></a></a>
 
     <p>
       故經之以五事, 校之以七計, 而索其情.<br>
@@ -397,7 +498,7 @@
     </p><br>
 
 
-  <a><h3>[노자도덕경 제 30장]</h3></a>
+  <a><a><h3>[노자도덕경 제 30장]</h3></a></a>
 
     <p>
       以道佐人主者   이도좌인주자<br>
@@ -453,7 +554,7 @@
   </p><br>
 
 
-  <a><h3>[전쟁은 존망을 결정한다]</h3></a>
+  <a><a><h3>[전쟁은 존망을 결정한다]</h3></a></a>
 
     <p>
       孫子曰: 兵者, 國之大事. 死生之地, 存亡之道, 不可不察也.<br>
