--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -47,15 +47,83 @@
   <div id="contents">
     <img src="Blizzard_games.jpg" width="100%">
 
-  <h1>Game Industry Trends[Lv.4]</h1><br><br><br>
+  <h1>Game Industry Trends[Lv.5]</h1><br><br><br>
 
 
 
-
-  <a><h2>[The next catastrophe - June 27-July 3rd 2020]</h2></a>
+  <a><a><h2>[Retro or radical? - July 4th-10th 2020]</h2></a></a>
 
   <p>
-    <a><h3>The world this week - Politics</h3></a>
+    <a><a><h3>The world this week - Politics</h3></a></a>
+
+    Police in Hong Kong made the first arrests under a draconian national-security law imposed from Beijing. Hong Kongers can now be jailed for life for vaguely defined crimes such as "subversion" or "conspiring" with anyone abroad to provoke "hatred" of the communist regime. Mainland secret police can now operate in Hong Kong. America's House of Representatives unanimously passed a bill to put sanctions on banks that do business with Chinese officials who implement the crackdown.<br><br>
+
+    Boris Johnson reiterated his promise that Hong Kongers who were born before 1997, when the territory was handed back to China, could settle in Britain. The handover agreement back then stipulated that the city would retain its basic freedoms until at least 2047.<br><br>
+
+    Following months of talks, the UN Security Council passed a resolution calling for a 90-day global ceasefire to allow war-torn areas to battle covid-19.<br><br>
+
+    India banned 59 apps developed by China's tech giants, including TikTok, accusing them of threatening the country's security. The apps have hundreds of millions of users in India.<br><br>
+
+    A terrorist outfit seeking independence for Balochistan, Pakistan's largest province, claimed responsibility for and attack on the stock exchange in Karachi. The assailants killed three people before they were shot dead by police.<br><br>
+
+    Iran issued an arrest warrant for Donald Trump. It asked Interpol for help in detaining him and 35 others in accuses of involvement in the drone strike that killed Qassem Suleimanin in January. Suleimani was an Iranian general who oversaw Shia militias that carried out attacks all over the Middle East. Interpol dismissed Iran's request.<br><br>
+
+    Scores of people were killed during demonstrations in Ethiopia that erupted after the killing of Hachalu Hundessa, a prominent Oromo musician. His songs helped inspire a protest movement that led to the appointment of Abiy Ahmed as prime minister in 2018.<br><br>
+
+    The leaders of Niger, Burkina aFaso, Chad, Mali and Mauritania met to discuss ways of strengthening security to stop a jihadist insurgency in the Sahel. They were joined by Emmanuel Macron, the president of France, and Pedro Sanchez, the prime minister of Spain. France has more than 5,000 troops in the region.<br><br>
+
+    Zimbabwe froze most mobile money transactions to defend its ailing currency. It also suspended trading on the stock exchange, where traders had been observing share prices to estimate how much the currency is really worth.<br><br>
+
+    Nearly 30 people, thought to be from the New Generation Jalisco drug gang, attacked the armoured car in which Mexico City's police chief was riding. Two bodyguards and a passerby were killed. In the town of Irapuato, 24 people were slain by gunmen at a drug-rehabilitation centre. One of the government's central pledges is to reduce gang violence.<br><br>
+
+    Mexican police arrested a new suspect for the murder of 43 students in the southern state of Guerrero in 2014. An earlier report by the government contended that police had handed over the students to a gang, which killed the students and burned their bodies. The report was widely seen as flawed.<br><br>
+
+    The United States-Mexico-Canada Agreement, which replaces the North American Free Trade Agreement(NAFTA), came into force<br><br>
+
+    Mississippi's legislature voted to remove the Confederate battle flag from the state flag, which has flown outside the Capitol building since 1894. It is the last state to unstitch the emblem of the Confederacy from official regalia.<br><br>
+
+    Russians voted in a plebiscite on constitutional reforms. According to the electoral commission, 78% approved a package that includes inflation-proof pensions, a high minimum wage and a ban on gay marriage. It also allows Vladimir Putin to run twice more for president, and to sack judges. Voters had to say yes or no to the whole package.<br><br>
+
+    In France Emmanuel Macron's party was hammered in the second round of local elections. The Greens won the mayor's office in a number of big cities; the Socialists handily hung on to Paris. Mr Macron is now under pressure to relaunch his presidency with an extensive reshuffle.<br><br>
+
+    The first round in Poland's presidential election was inconclusive, a rebuke to the incumbent Andrzej Duda, who is backed by the ruling Law and Justice party. Polls show him running neck and neck with the liberal mayor of Warsaw in the next round.<br><br>
+
+    Ireland got its first-ever coalition government between its two historic main parties, Fianna Fail and Fine Gael. The new prime minister, Micheal Martin, replaced Leo Varadkar, who will return to the office in two years' time if the coalition lasts that long.<br><br>
+
+    Britain's prime minister, Boris Johnson, invoked the spirit of Franklin Roosevelt when he announced a "new deal" to rebuild the economy. Many of the "new" projects are already in the pipeline. Mr Johnson has urged his countrymen to go to their local for a pint when pubs reopen on July 4th.<br><br>
+
+    <a><a><h3>The world this week - Business</h3></a></a>
+
+    In another dreadful week for workers in the aviation industry, Airbus said it would cut 15,000 jobs, about a tenth of its total, because it does not expect demand for its aircraft to return to pre-covid levels until at least 2023, or possibly 2025. The announcement was lambasted in France, where the government has dispensed a huge rescue package. Aero-mexico, Mexico's biggest international airline, filed for bankruptcy protection. And easyJet, a British carrier, started a consultation on redundancies, which could see 727 pilots lose their jobs. Qantas announced 6,000 jobs cuts.<br><br>
+
+    There was some good news for Virgin Australia, after two months in bankruptcy proceedings, as Bain Capital stepped in to buy the business. Shareholders lost their shirts in the deal, but the airline hopes to fly again in September.<br><br>
+
+    The Federal Aviation Administration confirmed that the first certification flights had been conducted for Boeing's 737 MAX, which has been grounded for 15 months following two crashes. Although the tests were described as a "milestone" in its rehabilitation, Boeing's passenger plane won't be returning to the skies soon; the FAA still has to carry out "a number of key tasks".<br><br>
+
+    Shell joined the list of big oil and gas companies that have had to write down the value of assets because of falling energy demand and lower oil prices. The company expects to record charges of between $15bn and $22bn in the second quarter related to the writedowns. BP, meanwhile, agreed to sell what is left of its petrochemicals business to Ineos, a privately held firm with a record of taking over the chemical divisions of multinational companies, for $5bn.<br><br>
+
+    Germany became the latest flashpoint for safely concerns at Amazon warehouses during the pandemic, as its workers went on strike. Their union claims that 40 people contracted covid-19 at two sites recently. The online retailer says it has provided enough personal protective equipment.<br><br>
+
+    Meanwhile, Amazon sealed a deal to buy Zoox, a developer of self-driving taxis. Reportedly costing $1.2bn, it is Amazon's biggest investment in autonomous-vehicle technology, which it may try to adapt for its delivery services.<br><br>
+
+    Wells Fargo became the first big American bank to cut its dividend in light of the Federal Reserve's recent stress tests. The central bank banned share buy-back programmes and capped dividends for 33 banks during the third quarter. All large banks will be required to resubmit and update their capital plans later this year to show they can cope with and extreme economic scenario.<br><br>
+
+    Cirque du Soleil filed for bankruptcy protection and laid off 3,500 employees who had been furloughed in March, when it was forced to cancel performances because of covid-19. In other pandemic related redundancies, SSP Group, which operates food outlets at transport hubs around the world, and is best known in Britain, its home market, for its Upper Crust and Camden Food Co shops, slashed 5,000 jobs. Microsoft announced the permanent closure of all its 83 stores, most of which are in America.<br><br>
+
+    American stockmarkets recorded their best quarter in at least two decades. From April to June the S&P 500 and Dow Jones Industrial Average rose by around 25%, and the Nasdaq by over a third. Most of the gains came in April and May following the market rout in March amid the coronavirus crisis(European stocks actually outperformed the S&P 500 in June). Most share indices are still lower than at the start of the year. The tech-heavy Nasdaq is a notable exception; it has climbed by 10%.<br><br>
+
+    Tesla overtook Toyota to become the world's biggest carmaker by market capitalisation. The maker of electric vehicles has seen its share price rev up from $225 a year ago to $1,120, giving it a value of more than $205bn. It has yet to turn an annual profit.<br><br>
+
+    In China, Byton, a startup with ambitions to compete against Tesla, suspended production and sent its staff home. Sales of electric and hybrid vehicles have fallen drastically in China following the end of government tax breaks. Byton is one of several Chinese EV startups that investors piled into hoping for rich returns, though it has not delivered a single vehicle.<br><br>
+
+    Mirror, a home-workout business, was snapped up by LuLulemon, a maker of snazzy yoga pants, for $500m. Mirror makes body-length wall mounted smart screens through which exercisers can interact online with buff personal trainers live or on-demand. The pandemic has been a boon for the high-end fitness industry. But once gyms reopen it remains to be seen whether people will still splash out $1,500 for one of Mirror's screens, or just plod and puff on a treadmill.<br><br>
+  </p><br>
+
+
+  <a><a><h2>[The next catastrophe - June 27-July 3rd 2020]</h2></a></a>
+
+  <p>
+    <a><a><h3>The world this week - Politics</h3></a></a>
 
     Some states in the south and west of the United States recorded their biggest daily rise in cases of covid-19, bringing America's total to over 2.3m. The governor of Texas, Greg Abbott, urged people to stay indoors. He also declared that the state remained "wide open for business". California recorded new highs in hospital admissions. Connecticut, New Jersey and New York are to quarantine visitors  from states that are covid hotspots.<br><br>
 
@@ -93,7 +161,7 @@
 
     Prosecutors from a court in The Hague said they were charging Hashim Thaci, the president of Kosovo, with war crimes, murder and torture relating to the period during and immediately after the war there in 1999. Mr Thaci had been about to attend a summit at the White House, but cancelled his visit.<br><br>
 
-    <a><h3>The world this week - Business</h3></a>
+    <a><a><h3>The world this week - Business</h3></a>
 
     The IMF drastically reduced its outlook for the world economy, projecting that it will contract by 4.9% this year. The downward revision was across the board; all regions will suffer shrinkage. America's GDP is now expected to fall by 8%, Britain's and the euro area's both by 10.2% and Japan's by 5.8% Most emerging markets will fare little better. China, though, is forecast to grow by 1%.<br><br>
 
@@ -123,10 +191,10 @@
   </p>
 
 
-  <a><h2>[The new world disorder - June 20th-26th 2020]</h2></a>
+  <a><a><h2>[The new world disorder - June 20th-26th 2020]</h2></a></a>
 
   <p>
-    <a><h3>The world this week - Politics</h3></a>
+    <a><a><h3>The world this week - Politics</h3></a></a>
 
     Brazil reported a record 35,000 new cases of covid-10 in a day. Even that grim figure is widely regarded as an undercount. India is now recording tens of thousands of new infections each week. In america, Florida, Texas and Arizona set daily records for new cases. Although many places are easing lockdowns, Anthony Fauci, the leading adviser to the White House on infectious diseases, warned that the pandemic is far from over: "The numbers speak for themselves."<br><br>
 
@@ -160,7 +228,7 @@
 
     A judge overseeing a corruption trial in the <b>Democratic Republic of Congo</b> was murdered. Police initially said that the judge had had a heart attack, but an autopsy showed he had died from brain injuries after being stabbed in the head.<br><br>
 
-    <a><h3>The world this week - Business</h3></a>
+    <a><a><h3>The world this week - Business</h3></a></a>
 
     The <b>Federal Reserve</b> clarified its new bond-buying strategy, announcing that it would acquire individual corporate bonds on the secondary market. This comes on top of its purchases in exchange-traded funds, which include some junk-rated funds that track debt. But the central bank's latest move comes almost three months after it first announced emergency measures to shore up markets. Questions have been raised about the length of time it has taken to roll out some of its programmes.<br><br>
 
